# RustMarrow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTENT_PLAN.md  NOTES.md  ROADMAP.md
examples/: local-setup.md
src/: agent.rs  config.rs  db.rs  google_auth.rs  main.rs  memory.rs
src/pullers/: calendar.rs  github.rs  gmail.rs  mod.rs  slack.rs
